Initial commit: Portfolio website with CV downloads

--- a/about.html
+++ b/about.html
@@ -12,17 +12,18 @@
       <img src="images/profile.jpg" alt="Portrait of Tamar Karwan" class="profile-photo" />
       <div class="hero-text">
         <h1>Tamar Karwan</h1>
-        <h2>Frontend Developer · React · UI Engineering</h2>
+        <h2>Frontend Developer · React & HealthTech</h2>
         <p>
-          Frontend developer focusing on structured, reliable, and user-centered interfaces.
-          Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript (ES6+)</strong>, and <strong>React</strong>.
-          Committed to clean code, accessibility, and maintainable UI architecture.
+          Frontend Developer with a unique background in Therapy. I combine technical skills in 
+          <strong>React</strong> and <strong>AI</strong> with a deep understanding of human needs. 
+          Highly autodidactic and motivated, with a proven ability to master new technologies 
+          independently while thriving in structured mentorship programs.
         </p>
         <div class="social-links">
           <a class="btn" href="mailto:tkarwan@gmail.com">Email</a>
           <a class="btn" href="https://github.com/tamtam888" target="_blank" rel="noopener">GitHub</a>
           <a class="btn" href="https://www.linkedin.com/in/tamar-karwan-b4784b256" target="_blank" rel="noopener">LinkedIn</a>
-          <a class="btn" href="index.html">← Back</a>
+          <a class="btn btn-outline" href="index.html">← Back</a>
         </div>
       </div>
     </section>
@@ -30,45 +31,87 @@
     <section class="section">
       <h3 class="section-title">Professional Summary</h3>
       <p>
-        Self-driven frontend engineer with strong learning agility. Translate product requirements into responsive,
-        accessible, and consistent UIs. Comfortable owning features end-to-end: planning, component design, state
-        management, integration, and delivery.
+        Frontend Developer with a unique background in Therapy combining technical skills in React and AI 
+        with deep understanding of human needs. Highly autodidactic and motivated, with proven ability to 
+        master new technologies independently. Focused on clean code, automation, and "Empathy-Driven Development".
       </p>
     </section>
 
     <section class="section">
-      <h3 class="section-title">Skills</h3>
+      <h3 class="section-title">Technical Skills</h3>
       <div class="cards">
-        <a class="card"><span class="card-title">Frontend</span><span class="card-sub">HTML5, CSS3, JS (ES6+), React (Hooks)</span></a>
-        <a class="card"><span class="card-title">Tooling</span><span class="card-sub">Git, GitHub, VS Code, Node</span></a>
-        <a class="card"><span class="card-title">Quality</span><span class="card-sub">Accessibility (a11y), Testing Library</span></a>
-        <a class="card"><span class="card-title">Integrations</span><span class="card-sub">Google OAuth, Calendar API, REST</span></a>
-        <a class="card"><span class="card-title">Delivery</span><span class="card-sub">CI/CD, Docker, Vercel</span></a>
-        <a class="card"><span class="card-title">Design</span><span class="card-sub">Responsive UI, UX, Figma</span></a>
+        <div class="card">
+          <span class="card-title">Frontend</span>
+          <span class="card-sub">React (Hooks, Context), JavaScript (ES6+), HTML5, CSS3, Tailwind, Responsive Design</span>
+        </div>
+        <div class="card">
+          <span class="card-title">AI & Automation</span>
+          <span class="card-sub">OpenAI API Integration, Make.com, n8n, Building AI Agents</span>
+        </div>
+        <div class="card">
+          <span class="card-title">Backend & Tools</span>
+          <span class="card-sub">Medplum (FHIR), REST APIs, Git & GitHub, VS Code, Postman</span>
+        </div>
+        <div class="card">
+          <span class="card-title">Deployment</span>
+          <span class="card-sub">Docker, Vercel, CI/CD basics</span>
+        </div>
       </div>
     </section>
 
     <section class="section">
-      <h3 class="section-title">Featured Project – TaskMan</h3>
-      <p><strong>TaskMan</strong> — React task manager featuring component-based architecture, filtering, priorities, participants, deadlines, and a gamified mode.</p>
-      <ul class="meta-list">
-        <li><strong>Architecture:</strong> Modular components (TaskInput, TaskList, TaskItem, Tabs)</li>
-        <li><strong>Integrations:</strong> Google Sign-In, Calendar sync</li>
-        <li><strong>Delivery:</strong> Git branching, CI/CD, Docker, Vercel</li>
-        <li><strong>Quality:</strong> a11y with <code>aria-*</code>, testable UI</li>
-      </ul>
-      <p><a class="link-inline" href="https://github.com/tamtam888/TaskMan-Yellow-user" target="_blank" rel="noopener">View TaskMan on GitHub</a></p>
+      <h3 class="section-title">Featured Projects</h3>
+      
+      <div class="project-card">
+        <h4>MedicalCare - AI Health Log</h4>
+        <p class="project-meta">React, OpenAI, Medplum</p>
+        <p>Voice-activated health log designed to make technology accessible for elderly populations.</p>
+        <ul class="meta-list">
+          <li>Developed a React SPA with voice-to-text integration for easy symptom logging</li>
+          <li>Integrated OpenAI API to summarize daily health reports for caregivers</li>
+          <li>Implemented secure data storage using Medplum (FHIR standard) and complex scheduling logic</li>
+        </ul>
+        <p><a class="link-inline" href="https://github.com/tamtam888/MedicalCare" target="_blank" rel="noopener">View on GitHub →</a></p>
+      </div>
+
+      <div class="project-card">
+        <h4>TaskMan</h4>
+        <p class="project-meta">React, Google API</p>
+        <p>Gamified task management application focusing on user motivation.</p>
+        <ul class="meta-list">
+          <li>Built a modular task system with filtering, priorities, and deadlines</li>
+          <li>Integrated Google Calendar API for real-time syncing and LocalStorage for persistence</li>
+        </ul>
+        <p><a class="link-inline" href="https://github.com/tamtam888/TaskMan-Yellow-user" target="_blank" rel="noopener">View on GitHub →</a></p>
+      </div>
     </section>
 
     <section class="section">
-      <h3 class="section-title">Strengths</h3>
+      <h3 class="section-title">Experience</h3>
+      <div class="project-card">
+        <h4>Hydrotherapist & Rehabilitation Specialist</h4>
+        <p class="project-meta">2003 – 2024</p>
+        <ul class="meta-list">
+          <li>Managed long-term therapeutic processes for diverse populations, requiring high adaptability</li>
+          <li>Analyzed complex user (patient) needs to build personalized progress plans</li>
+          <li><strong>Relevance to Tech:</strong> Applying a "User-First" approach to build intuitive and accessible interfaces</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section">
+      <h3 class="section-title">Education & Continuous Learning</h3>
+      <p><strong>SHE CODES:</strong> Web Development Track (HTML, CSS, JS, React) | 2024 – Present</p>
+      <p><strong>Advanced AI & Automation Specialization:</strong></p>
       <ul class="meta-list">
-        <li>Clear, reusable React components</li>
-        <li>Solid Git workflow & documentation</li>
-        <li>Ownership from idea to delivery</li>
-        <li>Accessibility & RTL awareness</li>
-        <li>Fast learner, excellent communication</li>
+        <li>Self-Paced & Mentored Learning: Deep dive into AI Agents, Make.com, and n8n workflows</li>
+        <li>Demonstrated high learning agility by bridging the gap between healthcare and tech independently</li>
       </ul>
+    </section>
+
+    <section class="section">
+      <h3 class="section-title">Languages</h3>
+      <p>Hebrew (Native), English (Fluent)</p>
     </section>
   </main>
 
@@ -81,6 +124,3 @@
   </script>
 </body>
 </html>
-
-
-
