--- a/lessons/index.html
+++ b/lessons/index.html
@@ -3,36 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lessons – TAMAR KARWAN</title>
+  <title>Lessons – Tamar Karwan</title>
   <link rel="stylesheet" href="../style.css" />
-
 </head>
 <body>
-  <main class="container">
-    <nav class="breadcrumbs"><a href="../index.html">Home</a> › Lessons</nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <h1 class="site-title">My Learning Journey</h1>
+      <nav class="site-nav">
+        <a href="../index.html">Home</a>
+        <a href="../about.html">About</a>
+        <a href="../projects.html">Projects</a>
+      </nav>
+    </div>
+  </header>
 
-    <section class="lesson-hero">
-      <h1>Lessons</h1>
-      <p>Practice exercises organized by lesson. Click a card to view the exercises.</p>
+  <main class="container">
+    <section class="section">
+      <h2 class="section-title">Practice Exercises</h2>
+      <p>A collection of practice exercises from my web development journey with SHE CODES. Each lesson builds upon the previous, covering HTML, CSS, and JavaScript fundamentals.</p>
     </section>
 
     <section class="cards">
-      <a class="card" href="lesson-05/index.html"><span class="card-title">Lesson 05</span><span class="card-sub">HTML Basics</span></a>
-      <a class="card" href="lesson-06/index.html"><span class="card-title">Lesson 06</span><span class="card-sub">Lists & Links</span></a>
-      <a class="card" href="lesson-07/index.html"><span class="card-title">Lesson 07</span><span class="card-sub">Colors & Styling</span></a>
-      <a class="card" href="lesson-08/index.html"><span class="card-title">Lesson 08</span><span class="card-sub">Organization</span></a>
-      <a class="card" href="lesson-09/index.html"><span class="card-title">Lesson 09</span><span class="card-sub">CSS Practice</span></a>
-      <a class="card" href="lesson-10/index.html"><span class="card-title">Lesson 10</span><span class="card-sub">Layout</span></a>
-      <a class="card" href="lesson-11/index.html"><span class="card-title">Lesson 11</span><span class="card-sub">Tables & Layout</span></a>
-      <a class="card" href="lesson-12/index.html"><span class="card-title">Lesson 12</span><span class="card-sub">JS Intro</span></a>
-      <a class="card" href="lesson-13/index.html"><span class="card-title">Lesson 13</span><span class="card-sub">JS & DOM</span></a>
-      <a class="card" href="lesson-14/index.html"><span class="card-title">Lesson 14</span><span class="card-sub">JS Practice</span></a>
+      <a class="card" href="lesson-05/index.html">
+        <span class="card-title">Lesson 05</span>
+        <span class="card-sub">HTML Basics - Structure & Elements</span>
+      </a>
+      <a class="card" href="lesson-06/index.html">
+        <span class="card-title">Lesson 06</span>
+        <span class="card-sub">Lists & Links - Navigation & Structure</span>
+      </a>
+      <a class="card" href="lesson-07/index.html">
+        <span class="card-title">Lesson 07</span>
+        <span class="card-sub">Colors & Styling - CSS Fundamentals</span>
+      </a>
+      <a class="card" href="lesson-08/index.html">
+        <span class="card-title">Lesson 08</span>
+        <span class="card-sub">Organization - Project Structure</span>
+      </a>
+      <a class="card" href="lesson-09/index.html">
+        <span class="card-title">Lesson 09</span>
+        <span class="card-sub">CSS Practice - Advanced Styling</span>
+      </a>
+      <a class="card" href="lesson-10/index.html">
+        <span class="card-title">Lesson 10</span>
+        <span class="card-sub">Layout - Flexbox & Grid</span>
+      </a>
+      <a class="card" href="lesson-11/index.html">
+        <span class="card-title">Lesson 11</span>
+        <span class="card-sub">Tables & Layout - Data Display</span>
+      </a>
+      <a class="card" href="lesson-12/index.html">
+        <span class="card-title">Lesson 12</span>
+        <span class="card-sub">JS Intro - JavaScript Basics</span>
+      </a>
+      <a class="card" href="lesson-13/index.html">
+        <span class="card-title">Lesson 13</span>
+        <span class="card-sub">JS & DOM - Interactivity</span>
+      </a>
+      <a class="card" href="lesson-14/index.html">
+        <span class="card-title">Lesson 14</span>
+        <span class="card-sub">JS Practice - Real Applications</span>
+      </a>
     </section>
 
-    <div class="lesson-footer">
-      <a class="btn back" href="../index.html">⬅ Back to Home</a>
+    <div style="margin-top: 40px; text-align: center;">
+      <a class="btn btn-outline" href="../index.html">← Back to Home</a>
     </div>
   </main>
+
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Tamar Karwan • Built with React & Empathy 💜</p>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
-
